--- a/src/frontend/scss/layout/_header.scss
+++ b/src/frontend/scss/layout/_header.scss
@@ -280,7 +280,7 @@ header#header .row .iframe-header-nav{
 }
 
 header#header .row.expanded span.iframe-header-toggle{
-	@include breakpoint(large) {
+	@include breakpoint(1240) {
 		height: 0.3rem;
 	}
 	@include breakpoint(medium) {
@@ -290,7 +290,8 @@ header#header .row.expanded span.iframe-header-toggle{
 			height: 1.6rem;
 	}
 	padding: .2rem .5rem;
-	width: 70px;
+	width: 64px;
+	font-size: 15px;
 }
 
 header#header .row.expanded span.iframe-header-toggle-on{
@@ -304,14 +305,15 @@ header#header .row.expanded span.iframe-header-toggle-on{
 		height: 2rem;
 	}
 	padding: .2rem .1rem;
-	width: 70px;
+	width: 64px;
+	font-size: 15px;
 }
 
 header#header .row.expanded span.iframe-header-toggle > a::after{
 	display: block;
     width: 0;
     height: 0;
-    border: inset 6px;
+    border: inset 5px;
     content: "";
     border-bottom-width: 0;
     border-top-style: solid;
@@ -319,11 +321,11 @@ header#header .row.expanded span.iframe-header-toggle > a::after{
     right: 5px;
     left: auto;
 	position: absolute;
-	@include breakpoint(large) {
-	top: 29%;
+	@include breakpoint(1240) {
+	top: 24%;
 	}
 	@include breakpoint(medium) {
-		top: 22%;
+		top: 18%;
 	}
 	@include breakpoint(small) {
 		top: 6%;
@@ -343,7 +345,7 @@ header#header .row.expanded span.iframe-header-toggle-on > a::after{
 	display: block;
     width: 0;
     height: 0;
-    border: inset 6px;
+    border: inset 5px;
     content: "";
     border-bottom-width: 0;
     border-top-style: solid;
@@ -352,10 +354,10 @@ header#header .row.expanded span.iframe-header-toggle-on > a::after{
     left: auto;
 	position: absolute;
 	@include breakpoint(large) {
-		top: 69%;
+		top: 58%;
 		}
 		@include breakpoint(medium) {
-			top: 67%;
+			top: 58%;
 		}
 		@include breakpoint(small) {
 			top: 58%;
